[package]
authors = ["Cryotheum"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "bevy_cryotheum"
repository = "https://github.com/Cryotheus/bevy_cryotheum"
version = "1.0.0"

#[workspace]
#members = ["examples/steam-example"]

[dependencies]
anyhow = "1.0"
arrayvec = { version = "0.7", optional = true }
bevy = "0.14"
cfg-if = "1.0"
once_cell = "1.19"
smallvec = { version = "1.13", optional = true }
thiserror = "1.0"

[features]
arrayvec = ["dep:arrayvec"]
default = ["arrayvec", "smallvec"]
dynamic_linking = ["bevy/dynamic_linking"]
serde = ["arrayvec/serde", "smallvec/serde"]
smallvec = ["dep:smallvec"]
