[package]
authors = ["Cryotheum"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "bevy_cryotheum"
repository = "https://github.com/Cryotheus/bevy_cryotheum"
version = "1.2.0"

#[workspace]
#members = ["examples/steam-example"]

[dependencies]
anyhow = "1.0"
arrayvec = { version = "0.7", optional = true }
bevy = "0.14"
cfg-if = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
smallvec = { version = "1.13", optional = true }
thiserror = "1.0"
toml = "0.8.19"

[features]
arrayvec = ["dep:arrayvec"]
default = ["arrayvec", "serde", "smallvec"]
dynamic_linking = ["bevy/dynamic_linking"]
pbr_multi_layer_material_textures = ["bevy/pbr_multi_layer_material_textures"]
pbr_transmission_textures = ["bevy/pbr_transmission_textures"]
serde = ["arrayvec/serde", "smallvec/serde", "dep:serde"]
smallvec = ["dep:smallvec"]
